Happy-Clients section end

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -44,3 +44,9 @@ body {
   background-color: #e76f51;
   color: #ffffff;
 }
+
+/* Clients section  */
+
+.clients__ratings i {
+  color: #e77c40;
+}
