--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -50,3 +50,12 @@ body {
 .clients__ratings i {
   color: #e77c40;
 }
+
+/* Faq section  */
+
+.accordion-button:focus {
+  border-color: transparent !important;
+  outline: 0 !important;
+  box-shadow: none !important;
+  background: transparent !important;
+}
