--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -20,7 +20,6 @@ body {
 .line {
   width: 80px;
   border: 1px solid #e76f51;
-
   margin: 0 auto;
 }
 
@@ -58,4 +57,28 @@ body {
   outline: 0 !important;
   box-shadow: none !important;
   background: transparent !important;
+}
+
+/* subscribe */
+
+.subscribe form .subscribe_input input {
+  border: 0;
+  outline: 0;
+  box-shadow: none;
+}
+
+.subscribe form .subscribe_input input {
+  font-size: 16px;
+  border-radius: 2px 0px 0px 100px;
+}
+
+.subscribe form .subscribe_input button {
+  border-radius: 0px 50px 50px 0px;
+  background-color: #e76f51;
+}
+
+/* Footer part */
+
+.footer__bg {
+  background-color: #0b0d17;
 }
